--- a/use/client/partials/wumpus/newgame.html
+++ b/use/client/partials/wumpus/newgame.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" role="form" data-ng-controller="lime.client.wumpus.newgame">
+<form class="form-horizontal" role="form">
     <div class="form-group">
         <label class="col-sm-2 control-label">Chance</label>
 
