--- a/use/client/partials/wumpus/newgame.html
+++ b/use/client/partials/wumpus/newgame.html
@@ -31,6 +31,13 @@
             <label><input type="radio" value="dynamic" data-ng-model="gameConfig.timing" disabled>Dynamic</label>
         </div>
     </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Room Count</label>
+
+        <div class="col-sm-10">
+            <input class="form-control" type="number" min="4" data-ng-model="gameConfig.roomCount"/>
+        </div>
+    </div>
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
