--- a/use/client/partials/wumpus/app.html
+++ b/use/client/partials/wumpus/app.html
@@ -1,3 +1,4 @@
 <h1>Wumpus</h1>
 
-<div data-ng-include="'partials/wumpus/newgame.html'"></div>
+<div data-ng-if="state==='newgame'" data-ng-include="'partials/wumpus/newgame.html'"></div>
+<div data-ng-if="state==='instance'" data-wumpus-instance></div>
