--- a/use/client/partials/wumpus/instance.html
+++ b/use/client/partials/wumpus/instance.html
@@ -1,1 +1,1 @@
-<span class="room" data-ng-repeat="room in rooms"></span>
+<span data-ng-repeat="room in rooms" data-wumpus-room="room" data-bounds="bounds"></span>
