--- a/use/client/partials/wumpus/newgame.html
+++ b/use/client/partials/wumpus/newgame.html
@@ -2,41 +2,75 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Chance</label>
 
-        <div class="col-sm-10 radio">
+        <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" value="deterministic" data-ng-model="gameConfig.chance" disabled>Deterministic</label>
             <label><input type="radio" value="stochastic" data-ng-model="gameConfig.chance" disabled>Stochastic</label>
         </div>
+        <div class="col-sm-7 form-control-static">does my wheel slip because the dirt isn't solid (ice physics)</div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">Grain</label>
 
-        <div class="col-sm-10 radio">
+        <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" value="discrete" data-ng-model="gameConfig.grain" disabled>Discrete</label>
             <label><input type="radio" value="continuous" data-ng-model="gameConfig.grain" disabled>Continuous</label>
         </div>
+        <div class="col-sm-7 form-control-static">digital vs analog; move in chunks vs move via velocity (w/ noop)</div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">Observable</label>
 
-        <div class="col-sm-10 radio">
+        <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" value="fully" data-ng-model="gameConfig.observable" disabled>Fully</label>
             <label><input type="radio" value="partially" data-ng-model="gameConfig.observable" disabled>Partially</label>
         </div>
+        <div class="col-sm-7 form-control-static">fog of war; you remember where you were with some probability</div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">Timing</label>
 
-        <div class="col-sm-10 radio">
+        <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" value="static" data-ng-model="gameConfig.timing" disabled>Static</label>
             <label><input type="radio" value="dynamic" data-ng-model="gameConfig.timing" disabled>Dynamic</label>
         </div>
+        <div class="col-sm-7 form-control-static">the world moves without you; or only updates when you tell it to</div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label">A Priori</label>
+
+        <div class="col-sm-3 radio form-control-static">
+            <label><input type="radio" value="known" data-ng-model="gameConfig.apriori" disabled>Known</label>
+            <label><input type="radio" value="unknown" data-ng-model="gameConfig.apriori" disabled>Unknown</label>
+        </div>
+        <div class="col-sm-7 form-control-static">how much do you know about the world; you need to learn everything about HOW the world
+            works
+        </div>
+    </div>
+    <div class="form-group alert-warning">
+        <label class="col-sm-2 control-label">Agents</label>
+
+        <div class="col-sm-3 radio form-control-static">
+            <label><input type="radio" checked disabled>Single</label>
+            <label><input type="radio" disabled><strike>Multi</strike></label>
+        </div>
+        <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others</div>
+    </div>
+    <div class="form-group alert-warning">
+        <label class="col-sm-2 control-label">Statefulness</label>
+
+        <div class="col-sm-3 radio form-control-static">
+            <label><input type="radio" disabled><strike>Episodic</strike></label>
+            <label><input type="radio" checked disabled>Sequential</label>
+        </div>
+        <div class="col-sm-7 form-control-static">are decision related? sorting marbles vs solving a maze</div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">Room Count</label>
 
-        <div class="col-sm-10">
+        <div class="col-sm-3">
             <input class="form-control" type="number" min="4" data-ng-model="gameConfig.roomCount"/>
         </div>
+        <div class="col-sm-7 form-control-static"></div>
     </div>
 
     <div class="form-group">
