--- a/use/client/partials/wumpus/instance.html
+++ b/use/client/partials/wumpus/instance.html
@@ -1,1 +1,4 @@
-<span data-ng-repeat="room in rooms" data-wumpus-room="room" data-bounds="bounds"></span>
+<a data-ng-click="newGame()">New Game</a>
+<div class="game-container">
+    <span data-ng-repeat="room in rooms" data-wumpus-room="room" data-bounds="bounds"></span>
+</div>
