--- a/use/client/partials/wumpus/newgame.html
+++ b/use/client/partials/wumpus/newgame.html
@@ -12,8 +12,8 @@
         <label class="col-sm-2 control-label">Grain</label>
 
         <div class="col-sm-3 radio form-control-static">
-            <label><input type="radio" value="discrete" data-ng-model="gameConfig.grain" disabled>Discrete</label>
-            <label><input type="radio" value="continuous" data-ng-model="gameConfig.grain" disabled>Continuous</label>
+            <label><input type="radio" value="discrete" data-ng-model="gameConfig.grain">Discrete</label>
+            <label><input type="radio" value="continuous" data-ng-model="gameConfig.grain">Continuous</label>
         </div>
         <div class="col-sm-7 form-control-static">digital vs analog; move in chunks vs move via velocity (w/ noop)</div>
     </div>
@@ -46,23 +46,27 @@
             works
         </div>
     </div>
-    <div class="form-group alert-warning">
+    <div class="form-group text-muted italic">
         <label class="col-sm-2 control-label">Agents</label>
 
         <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" checked disabled>Single</label>
             <label><input type="radio" disabled><strike>Multi</strike></label>
         </div>
-        <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others</div>
+        <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others (no intentions to implement this
+            at this time)
+        </div>
     </div>
-    <div class="form-group alert-warning">
+    <div class="form-group text-muted italic">
         <label class="col-sm-2 control-label">Statefulness</label>
 
         <div class="col-sm-3 radio form-control-static">
             <label><input type="radio" disabled><strike>Episodic</strike></label>
             <label><input type="radio" checked disabled>Sequential</label>
         </div>
-        <div class="col-sm-7 form-control-static">are decision related? sorting marbles vs solving a maze</div>
+        <div class="col-sm-7 form-control-static">are decision related? sorting marbles vs solving a maze (wumpus is sequential by
+            definition)
+        </div>
     </div>
     <div class="form-group">
         <label class="col-sm-2 control-label">Room Count</label>
