render different rooms based on observability

--- a/use/client/partials/wumpus/newgame.html
+++ b/use/client/partials/wumpus/newgame.html
@@ -21,8 +21,8 @@
         <label class="col-sm-2 control-label">Observable</label>
 
         <div class="col-sm-3 radio form-control-static">
-            <label><input type="radio" value="fully" data-ng-model="gameConfig.observable" disabled>Fully</label>
-            <label><input type="radio" value="partially" data-ng-model="gameConfig.observable" disabled>Partially</label>
+            <label><input type="radio" value="fully" data-ng-model="gameConfig.observable">Fully</label>
+            <label><input type="radio" value="partially" data-ng-model="gameConfig.observable">Partially</label>
         </div>
         <div class="col-sm-7 form-control-static">fog of war; you remember where you were with some probability</div>
     </div>
