oooops! timing is it's own property

--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -36,8 +36,8 @@
                 <label class="col-sm-2 control-label">Timing</label>
 
                 <div class="col-sm-3 radio form-control-static">
-                    <label><input type="radio" value="static" data-ng-model="config.game.timing" disabled>Static</label>
-                    <label><input type="radio" value="dynamic" data-ng-model="config.game.timing" disabled>Dynamic</label>
+                    <label><input type="radio" value="static" data-ng-model="config.game.timing">Static</label>
+                    <label><input type="radio" value="dynamic" data-ng-model="config.game.timing">Dynamic</label>
                 </div>
                 <div class="col-sm-7 form-control-static">the world moves without you; or only updates when you tell it to</div>
             </div>
