--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -53,17 +53,14 @@
                     works
                 </div>
             </div>
-            <div class="form-group text-muted italic">
+            <div class="form-group">
                 <label class="col-sm-2 control-label">Agents</label>
 
                 <div class="col-sm-3 radio form-control-static">
-                    <label><input type="radio" checked disabled>Single</label>
-                    <label><input type="radio" disabled><strike>Multi</strike></label>
+                    <label><input type="radio" value="single" data-ng-model="config.game.agents">Single</label>
+                    <label><input type="radio" value="multi" data-ng-model="config.game.agents">Multi</label>
                 </div>
-                <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others (no intentions to
-                    implement
-                    this
-                    at this time)
+                <div class="col-sm-7 form-control-static">are you alone, or do you have to battle/coop with others (is there a wumpus?)
                 </div>
             </div>
             <div class="form-group text-muted italic">
