--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -149,7 +149,7 @@
     </div>
 </div>
 
-<div class="panel panel-default" data-ng-init="showKeyConfig = true">
+<div class="panel panel-default" data-ng-init="showKeyConfig = false">
     <div class="panel-heading" data-ng-click="showKeyConfig = !showKeyConfig"><h3>
                 <span class="glyphicon" data-ng-class="{
                         'glyphicon-chevron-down': showKeyConfig,
