--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -3,7 +3,7 @@
 <form class="form-horizontal" role="form">
 <div class="panel panel-default">
     <div class="panel-heading"><h3>Environment</h3></div>
-    <div class="panel-body">
+    <div class="panel-body" data-ng-show="true">
 
         <div class="form-group">
             <label class="col-sm-2 control-label">Chance</label>
@@ -96,53 +96,47 @@
     </h3></div>
     <div class="panel-body" data-ng-show="showAdvancedConfig">
 
-        <div class="form-group has-feedback"
-             data-ng-class="{'has-success': config.agent.radius, 'has-error': !config.agent.radius}">
+        <div class="form-group">
             <label class="col-sm-2 control-label">Agent Radius</label>
 
-            <div class="col-sm-3">
-                <input class="form-control" type="number" min="6" step="4" data-ng-model="config.agent.radius"/>
-                        <span class="glyphicon form-control-feedback"
-                              data-ng-class="{'glyphicon-ok': config.agent.radius, 'glyphicon-remove': !config.agent.radius}"></span>
+            <div class="col-sm-3 form-control-static">
+                <input type="range" min="6" step="1" max="{{config.room.radius}}" data-ng-model="config.agent.radius"/>
             </div>
-            <div class="col-sm-7 form-control-static">How large is the agent and wumpus? (Note: shouldn't be larger than the room)</div>
+            <div class="col-sm-1 form-control-static">{{config.agent.radius | number}}</div>
+            <div class="col-sm-6 form-control-static">How large is the agent and wumpus?</div>
         </div>
-        <div class="form-group has-feedback"
-             data-ng-class="{'has-success': config.room.radius, 'has-error': !config.room.radius}">
+        <div class="form-group">
             <label class="col-sm-2 control-label">Room Radius</label>
 
-            <div class="col-sm-3">
-                <input class="form-control" type="number" min="12" step="8" data-ng-model="config.room.radius"/>
-                        <span class="glyphicon form-control-feedback"
-                              data-ng-class="{'glyphicon-ok': config.room.radius, 'glyphicon-remove': !config.room.radius}"></span>
+            <div class="col-sm-3 form-control-static">
+                <input type="range" min="{{config.agent.radius}}" step="1" max="108" data-ng-model="config.room.radius"/>
             </div>
-            <div class="col-sm-7 form-control-static">How large are the rooms?</div>
+            <div class="col-sm-1 form-control-static">{{config.room.radius | number}}</div>
+            <div class="col-sm-6 form-control-static">How large are the rooms?</div>
         </div>
-        <div class="form-group has-feedback"
-             data-ng-class="{'has-success': config.pit.probability, 'has-error': !config.pit.probability}">
+        <div class="form-group">
             <label class="col-sm-2 control-label">Pit Probability</label>
 
-            <div class="col-sm-3">
-                <input class="form-control" type="number" max="1" min="0.1" step="0.1" data-ng-model="config.pit.probability"/>
-                        <span class="glyphicon form-control-feedback"
-                              data-ng-class="{'glyphicon-ok': config.pit.probability, 'glyphicon-remove': !config.pit.probability}"></span>
+            <div class="col-sm-3 form-control-static">
+                <input type="range" min="0" step="0.01" max="1" data-ng-model="config.pit.probability"/>
             </div>
-            <div class="col-sm-7 form-control-static">Once the objects have been placed (exit/wumpus/gold), how likely is it for pits to
-                appear
+            <div class="col-sm-1 form-control-static">{{config.pit.probability | number: 2}}</div>
+            <div class="col-sm-6 form-control-static">
+                Used when generating a new map.
+                Once the objects have been placed (exit/wumpus/gold), how likely is it for pits to appear?
             </div>
         </div>
-        <div class="form-group has-feedback"
-             data-ng-class="{'has-success': config.grain.continuous.branches, 'has-error': !config.grain.continuous.branches}">
-            <label class="col-sm-2 control-label">Branching Factor (continuous)</label>
+        <div class="form-group" data-ng-class="{'text-muted italic': config.game.grain!=='continuous'}">
+            <label class="col-sm-2 control-label">Branching Factor</label>
 
-            <div class="col-sm-3">
-                <input class="form-control" type="number" max="12" min="2" data-ng-model="config.grain.continuous.branches"
+            <div class="col-sm-3 form-control-static">
+                <input type="range" min="2" step="1" max="12" data-ng-model="config.grain.continuous.branches"
                        data-ng-disabled="config.game.grain !== 'continuous'"/>
-                        <span class="glyphicon form-control-feedback"
-                              data-ng-class="{'glyphicon-ok': config.grain.continuous.branches, 'glyphicon-remove': !config.grain.continuous.branches}"></span>
             </div>
-            <div class="col-sm-7 form-control-static">When the game is in continuous mode, how many branching rooms should the game
-                generate.
+            <div class="col-sm-1 form-control-static">{{config.grain.continuous.branches | number}}</div>
+            <div class="col-sm-6 form-control-static">
+                <strong>Continuous Only:</strong>
+                When the game is in continuous mode, how many branching rooms should the game generate.
             </div>
         </div>
 
