--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -139,6 +139,19 @@
                 When the game is in continuous mode, how many branching rooms should the game generate.
             </div>
         </div>
+        <div class="form-group" data-ng-class="{'text-muted italic': config.game.timing!=='dynamic'}">
+            <label class="col-sm-2 control-label">Update / Second</label>
+
+            <div class="col-sm-3 form-control-static">
+                <input type="range" min="1" step="1" max="20" data-ng-model="config.timing.updatesPerSecond"
+                       data-ng-disabled="config.game.timing !== 'dynamic'"/>
+            </div>
+            <div class="col-sm-1 form-control-static">{{config.timing.updatesPerSecond | number}}</div>
+            <div class="col-sm-6 form-control-static">
+                <strong>Dynamic Only:</strong>
+                How many times per second should the game update?
+            </div>
+        </div>
 
     </div>
 </div>
