--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -100,7 +100,7 @@
             <label class="col-sm-2 control-label">Agent Radius</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="6" step="1" max="{{config.room.radius}}" data-ng-model="config.agent.radius"/>
+                <input type="range" min="6" step="1" max="{{config.room.radius}}" data-str-to-num data-ng-model="config.agent.radius"/>
             </div>
             <div class="col-sm-1 form-control-static">{{config.agent.radius | number}}</div>
             <div class="col-sm-6 form-control-static">How large is the agent and wumpus?</div>
@@ -109,7 +109,7 @@
             <label class="col-sm-2 control-label">Room Radius</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="{{config.agent.radius}}" step="1" max="108" data-ng-model="config.room.radius"/>
+                <input type="range" min="{{config.agent.radius}}" step="1" max="108" data-str-to-num data-ng-model="config.room.radius"/>
             </div>
             <div class="col-sm-1 form-control-static">{{config.room.radius | number}}</div>
             <div class="col-sm-6 form-control-static">How large are the rooms?</div>
@@ -118,7 +118,7 @@
             <label class="col-sm-2 control-label">Pit Probability</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="0" step="0.01" max="1" data-ng-model="config.pit.probability"/>
+                <input type="range" min="0" step="0.01" max="1" data-str-to-num data-ng-model="config.pit.probability"/>
             </div>
             <div class="col-sm-1 form-control-static">{{config.pit.probability | number: 2}}</div>
             <div class="col-sm-6 form-control-static">
@@ -130,7 +130,7 @@
             <label class="col-sm-2 control-label">Branching Factor</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="2" step="1" max="12" data-ng-model="config.grain.continuous.branches"
+                <input type="range" min="2" step="1" max="12" data-str-to-num data-ng-model="config.grain.continuous.branches"
                        data-ng-disabled="config.game.grain !== 'continuous'"/>
             </div>
             <div class="col-sm-1 form-control-static">{{config.grain.continuous.branches | number}}</div>
@@ -143,7 +143,7 @@
             <label class="col-sm-2 control-label">Update / Second</label>
 
             <div class="col-sm-3 form-control-static">
-                <input type="range" min="1" step="1" max="20" data-ng-model="config.timing.updatesPerSecond"
+                <input type="range" min="1" step="1" max="20" data-str-to-num data-ng-model="config.timing.updatesPerSecond"
                        data-ng-disabled="config.game.timing !== 'dynamic'"/>
             </div>
             <div class="col-sm-1 form-control-static">{{config.timing.updatesPerSecond | number}}</div>
