agent dies to wumpus
and the wumpus is drawn!

--- a/use/client/partials/wumpus/instance.html
+++ b/use/client/partials/wumpus/instance.html
@@ -2,6 +2,7 @@
 <a data-ng-click="gotoConfig()">Update Config</a>
 <div class="game-container">
     <span data-ng-repeat="room in rooms" data-wumpus-room="room" data-ng-show="room.visible"></span>
+    <span data-wumpus-agent="wumpus" data-ng-if="wumpus"></span>
     <span data-wumpus-agent="agent"></span>
 </div>
 
