updated key config docs for g/e/f
and changed text-muted italic to [disabled]

--- a/use/client/index.css
+++ b/use/client/index.css
@@ -1,5 +1,7 @@
-.italic { font-style: italic; }
-.text-muted { color: #aaa; }
+[disabled] {
+  font-style: italic;
+  color: #aaa;
+}
 
 .radio label {
   padding-right: 20px;
