--- a/use/client/partials/wumpus/config.html
+++ b/use/client/partials/wumpus/config.html
@@ -90,7 +90,7 @@
     <div class="panel-heading" data-ng-click="showAdvancedConfig = !showAdvancedConfig"><h3>
         <span class="glyphicon" data-ng-class="{
                 'glyphicon-chevron-down': showAdvancedConfig,
-                'glyphicon-chevron-up': !showAdvancedConfig
+                'glyphicon-chevron-right': !showAdvancedConfig
             }"></span>
         Advanced
     </h3></div>
@@ -160,7 +160,7 @@
     <div class="panel-heading" data-ng-click="showKeyConfig = !showKeyConfig"><h3>
         <span class="glyphicon" data-ng-class="{
                 'glyphicon-chevron-down': showKeyConfig,
-                'glyphicon-chevron-up': !showKeyConfig
+                'glyphicon-chevron-right': !showKeyConfig
             }"></span>
         Key Config
     </h3></div>
